Upgrade some Apis